0.19
    - Move File::Slurp from 'requires' to 'test_requires'

    - Make the default pragma logic a bit simpler

    - MySQL backend: Don't make host a required storage_args argument,
      MySQL will use localhost by default.

    - MySQL backend: Document collation settings that have to be right
      for Hailo not to blow up.

0.18 Fri Feb 26 05:02:17 GMT 2010

    - Don't keep the brain in memory by default anymore, but enable some
      safety-sacrificing performance optimizations instead

    - DBD::SQLite backend: It's now possible to set any PRAGMA SQLite
      supports at the start of the connection by supplying C<pragma_*>
      parameters in in C<storage_args>. See
      Hailo::Storage::DBD::SQLite documentation for more info.

    - Issue #28: Implement a ready() method for backends. This
      un-breaks the command-line interface with non-SQLite backends.

    - Word tokenizer: Fix capitalization of the first word in some cases

    - Add more exhaustive tests for the Word tokenizer. 

    - Un-break t/storage/DBD-mysql.t test

    - Never test PostgreSQL / MySQL unless explicitly told to do so.

0.17 Tue Feb 23 04:06:50 GMT 2010
    - Remove all storage engines that weren't DBD::*. I.e. the Perl
      backend and the flat Perl::Flat & CHI::* backends.

      These backends were added to experiment with alternate backends,
      but between them they had no redeeming quality aside from
      increasing our number of backends & tests. The downside is that
      we constantly had to deal with errors in these backends that
      weren't present in our primary DBD::* targets.

    - Remove Log::Log4perl. We weren't using it for anything except
      printing one log line. Maybe we'll add it in the future with
      proper support. See Issue #15.

    - Hailo now uses less memory by lazy-loading various modules that
      it previously loaded even if they were redundant.

    - Issue #12: --not-a-valid-option now prints the same help output