@@ -9,6 +9,8 @@
     - MySQL backend: Document collation settings that have to be right
       for Hailo not to blow up.
 
+    - Fix some capitalization/punctuation issues of words with dashes
+
 0.18 Fri Feb 26 05:02:17 GMT 2010
 
     - Don't keep the brain in memory by default anymore, but enable some
